# pyblsc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bs.cpp  bs.h  bsv.cpp  bsv.h  demo.py  demo_impliedvol_noQ.py  demo_noQ.py  fbs.cpp  fbs.h  lets_be_rational.cpp  lets_be_rational.h  normaldistribution.cpp  normaldistribution.h  pybs.cpp  rando.cpp  rando.h  rationalcubic.h  setup.py
tests/: CMakeLists.txt  prices.cpp
